# knxdclient

./: .gitignore  MANIFEST.in  README.md  knxdclient.py  mypy.ini  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
knxdclient/: __init__.py  client.py  encoding.py  packets.py
test/: _helper.py  test_client.py  test_conversion.py
