[metadata]
name = knxdclient
version = 0.4.0
url = https://github.com/mhthies/knxdclient
author = Michael Thies
author_email = mail@mhthies.de
description = A pure Python async client for KNXD's (EIBD's) native Layer 4
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = NOTICE, LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = knxdclient
python_requires = >=3.7
include_package_data = True
